// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for listType: ordered, orderType: alphabetically and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 1.5rem;
  list-style-type: lower-latin;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered, orderType: alphabetically and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 1.5rem;
  list-style-type: lower-latin;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered, orderType: numbered and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 1.5rem;
  list-style-type: decimal;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}"
`;

exports[`getComponentCss() should return correct css for listType: ordered, orderType: numbered and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) 1.5rem;
  list-style-type: decimal;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered, orderType: numbered and theme: dark 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-padding-left,.375rem);
  list-style-type: var(--p-internal-text-list-list-style-type,'•');
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}"
`;

exports[`getComponentCss() should return correct css for listType: unordered, orderType: numbered and theme: light 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-padding-left,.375rem);
  list-style-type: var(--p-internal-text-list-list-style-type,'•');
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px;
  --p-internal-text-list-padding-bottom: 16px;
  --p-internal-text-list-padding-left: .625rem;
  --p-internal-text-list-list-style-type: "–";
}"
`;
